[gd_scene load_steps=7 format=3 uid="uid://2dw4mcgo07yy"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_2twoo"]
[ext_resource type="Theme" uid="uid://36jd1mpgtxe0" path="res://levels_magazine/button_theme.tres" id="1_hi4yb"]
[ext_resource type="Texture2D" uid="uid://m2g15cxpp7ik" path="res://sprites/SpaceHolder.png" id="3_qnd3d"]
[ext_resource type="StyleBox" uid="uid://c6pjvu5c7ude3" path="res://sprites/normal_button.tres" id="3_rd1uq"]
[ext_resource type="StyleBox" uid="uid://cnxjit2cf2fql" path="res://levels_magazine/focusbutton.tres" id="4_3aas7"]
[ext_resource type="PackedScene" uid="uid://rym22y83e0pf" path="res://scenes/planet.tscn" id="6_six3q"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_hi4yb")
script = ExtResource("1_2twoo")

[node name="TextureRect" type="TextureRect" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 6000.0
offset_bottom = 4160.0
scale = Vector2(0.194181, 0.15655)
texture = ExtResource("3_qnd3d")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -121.0
offset_right = 76.0
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("3_rd1uq")
theme_override_styles/focus = ExtResource("4_3aas7")
text = "  Start   "
alignment = 0

[node name="LevelsButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("3_rd1uq")
theme_override_styles/focus = ExtResource("4_3aas7")
text = "  Levels"
alignment = 0

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 60)
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("3_rd1uq")
theme_override_styles/focus = ExtResource("4_3aas7")
text = "  Quit"
alignment = 0

[node name="Planet" parent="." instance=ExtResource("6_six3q")]
position = Vector2(957, 3)

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
